# floof

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yaml
benchmarks/: benchmark.py
floof/: __init__.py  damerau_levenshtein_trie.py  fuzzy.py  levenshtein_trie.py  trie.py
floof.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/floof/: __init__.py  _comparer.py  _matcher.py  _rustyfloof.pyi
python/floof/utils/: types.py  utils.py
src/: comparer.rs  hamming.rs  jaccard.rs  jaro.rs  levenshtein.rs  lib.rs  matcher.rs  metaphone.rs  nysiis.rs  phonetic.rs  rustyfloof.rs  set_based.rs  soundex.rs  utils.rs
src/floof/: __init__.py  _comparer.py  _linker.py  _matcher.py
src/floof/utils/: types.py  utils.py
tests/: test.py
