[package]
name = "floof"
version = "0.1.5"
edition = "2021"
description = "A library for fuzzymatching"
authors = ["Cangyuan Li"]
repository = "https://github.com/cangyuanli/floof/"
license = "MIT"
readme = "README.md"


[lib]
name = "floof"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
unicode-segmentation = "^1.6.0"
unicode-normalization = "^0.1"
smallvec = "1.10.0"
ahash = "0.8.3"
rayon = "1.7.0"
min-max-heap = "1.3.0"
phf = {version = "0.11.2", features = ["macros"]}
thiserror = "1.0.48"
indicatif = {version = "0.17.6", features = ["rayon"]}

[dev-dependencies]
csv = "1.1"

[features]
python = []
