[package]
name = "floof"
version = "0.1.11"
edition = "2021"
description = "A library for fuzzymatching"
authors = [ "Cangyuan Li",]
repository = "https://github.com/cangyuanli/floof/"
license = "MIT"
readme = "README.md"

[lib]
name = "floof"
crate-type = [ "cdylib",]

[dependencies]
unicode-segmentation = "^1.6.0"
smallvec = "1.10.0"
ahash = "0.8.3"
rayon = "1.7.0"
min-max-heap = "1.3.0"
thiserror = "1.0.48"
deunicode = "1.4.0"
counter = "0.5.7"

[features]
python = []

[dependencies.pyo3]
version = "0.19.2"
features = [ "extension-module",]

[dependencies.indicatif]
version = "0.17.6"
features = [ "rayon",]

[profile.release]
panic = "abort"
strip = "symbols"
codegen-units = 1
