[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=floof"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff]
per-file-ignores = {"__init__.py" = ["F401"]}