[metadata]
name = floof
version = attr: floof.__version__
author = Cangyuan Li
author_email = everest229@gmail.com
description = A library for fuzzymatching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CangyuanLi/floof
project_urls =
    Bug Tracker = https://github.com/CangyuanLi/floof/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jarowinkler
    jellyfish
    Levenshtein
    numpy
    pandas
    scikit-learn
    thefuzz[speedup]
    tqdm

[options.packages.find]
where = src
